@@ -1,5 +1,6 @@
 import hypothesis.strategytable as st
 import hypothesis.searchstrategy as strat
+import hypothesis.descriptors as descriptors
 
 
 def test_strategies_can_be_used_in_descriptors():
@@ -13,3 +14,11 @@ def test_has_strategy_for_frozensets():
     assert (
         st.StrategyTable.default().strategy(frozenset([int])).descriptor ==
         frozenset([int]))
+
+
+def test_has_strategy_for_samples():
+    table = st.StrategyTable.default()
+    sampling = descriptors.sampled_from([1, 2, 3])
+    assert table.has_specification_for(sampling)
+    assert table.has_specification_for([sampling])
+    assert table.has_specification_for(set([sampling]))
